feat(storage): implement restore and delete TULEAP-282669  018d00